common/dynaql/src/registry/resolvers/graphql/snapshots/dynaql__registry__resolvers__graphql__serializer__tests__field_directives@query { foo @include @deprecated }.snap
---
source: common/dynaql/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	foo @include @deprecated
}

