common/dynaql/src/registry/resolvers/graphql/snapshots/dynaql__registry__resolvers__graphql__serializer__tests__fragment_definitions.snap
---
source: common/dynaql/src/registry/resolvers/graphql/serializer.rs
expression: serialize(input)
---
query {
	repository(name: "api", owner: "grafbase") {
		pullRequest(number: 2129) {
			__typename
			... fields
		}

	}

}
fragment fields on PullRequest {
	id
	changedFiles
}

